update readme and style to fix image and anchor issues. Images were very large and running off the screen. Anchors were broken in non-github context because they were capitalized incorrectly. Lowercasing the anchors should not break github.

--- a/docs/images/style.css
+++ b/docs/images/style.css
@@ -24,4 +24,8 @@ p code {
     font-family: Consolas,"Liberation Mono",Menlo,Courier,monospace;
     font-size: 0.85rem;
 }
+
+img {
+    max-width: 100%
+}
 </style>
